Add the possibility to import specific resources